Stop media player from overlapping the nav bar

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ nav {
     top: 0px;
     width: 100%;
     padding: 20px;
+    z-index: 10;
 }
 
 .navbutton {
